adding getDaysFinishingWith(...), addExercise(...), addExercises(...)